<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00aae8"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag1_text">
    </TextView>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addmoney">
    </Button>
    <LinearLayout
    android:id="@+id/lpan"
    android:visibility="gone"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <EditText
        android:id="@+id/test1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_nominals"/>
    <Button
        android:id="@+id/ppDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/press_done"/>
    <Button
        android:id="@+id/ppCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/press_cancel"/>
</LinearLayout>
    <LinearLayout
        android:id="@+id/lpan1"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_count"/>
        <Button
            android:id="@+id/ppDone1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/press_dones"/>
        <Button
            android:id="@+id/ppCancel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/press_cancels"/>
    </LinearLayout>
</LinearLayout>