<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80b547"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag2_text">
    </TextView>
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdraw">
    </Button>
    <LinearLayout
        android:id="@+id/llPP"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/vida4a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_sum"        />
        <Button
            android:id="@+id/ppDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/press_donesw"/>
        </LinearLayout>
    <LinearLayout  android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/llAdd" android:orientation="vertical"/>
</LinearLayout>